--- a/Calc/app/src/main/res/layout/activity_calculator.xml
+++ b/Calc/app/src/main/res/layout/activity_calculator.xml
@@ -1,134 +1,217 @@
-package com.impy.impyhw1_2ndtry;
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:background="@drawable/images">
 
-import android.support.v7.app.AppCompatActivity;
-import android.os.Bundle;
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#00ff0000">
 
-import android.view.View;
-import android.widget.Button;
-import android.widget.TextView;
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/clear"
+            android:allowUndo="false"
+            android:autoText="true"
+            android:singleLine="false"
+            android:height="30dp"
+            android:linksClickable="false"
+            android:longClickable="false" />
 
-import java.util.Arrays;
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/clear"
+            android:background="@drawable/garoldfordelete"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
-public class MainActivity extends AppCompatActivity {
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    Button num[], op[], lastButton;
-    String token = "", operation = "";
-    Integer res = null;
-    TextView textView;
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="7"
+                android:id="@+id/b7"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-    @Override
-    protected void onCreate(Bundle savedInstanceState) {
-        super.onCreate(savedInstanceState);
-        setContentView(R.layout.activity_main);
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="8"
+                android:id="@+id/b8"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-        textView = (TextView)findViewById(R.id.textView);
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="9"
+                android:id="@+id/b9"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-        num = new Button[] {
-                (Button)findViewById(R.id.b0),
-                (Button)findViewById(R.id.b1),
-                (Button)findViewById(R.id.b2),
-                (Button)findViewById(R.id.b3),
-                (Button)findViewById(R.id.b4),
-                (Button)findViewById(R.id.b5),
-                (Button)findViewById(R.id.b6),
-                (Button)findViewById(R.id.b7),
-                (Button)findViewById(R.id.b8),
-                (Button)findViewById(R.id.b9),
-        };
-        op = new Button[] {
-                (Button)findViewById(R.id.add),
-                (Button)findViewById(R.id.sub),
-                (Button)findViewById(R.id.mul),
-                (Button)findViewById(R.id.div),
-                (Button)findViewById(R.id.pow),
-                (Button)findViewById(R.id.calc)
-        };
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="+"
+                android:id="@+id/add"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+        </LinearLayout>
 
-        for (final Button button : num) {
-            button.setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    if (!Arrays.asList(num).contains(lastButton)) {
-                        if (!token.equals("")) {
-                            res = Integer.valueOf(token);
-                        }
-                        token = "";
-                    }
-                    token = token + button.getText();
-                    textView.setText(token);
-                    lastButton = button;
-                }
-            });
-        }
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="4"
+                android:id="@+id/b4"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-        for (final Button button : op) {
-            button.setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    if (Arrays.asList(num).contains(lastButton) && !token.equals("")) {
-                        Integer result = null;
-                        switch (operation) {
-                            case "add":
-                                result = res + Integer.valueOf(token);
-                                break;
-                            case "sub":
-                                result = res - Integer.valueOf(token);
-                                break;
-                            case "mul":
-                                result  = res * Integer.valueOf(token);
-                                break;
-                            case "div":
-                                result = res / Integer.valueOf(token);
-                                break;
-                            case "pow":
-                                result = (int)Math.pow(res,Integer.valueOf(token));
-                                break;
-                        }
-                        if (result != null) {
-                            token = Integer.toString(result);
-                            textView.setText(token);
-                        }
-                        res = result;
-                        operation = getResources().getResourceEntryName(button.getId());
-                        lastButton  = button;
-                    }
-                }
-            });
-        }
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="5"
+                android:id="@+id/b5"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-        ((Button)findViewById(R.id.clear)).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View v) {
-                if (token.length() > 0) {
-                    token = token.substring(0, token.length() - 1);
-                    textView.setText(token);
-                }
-            }
-        });
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="6"
+                android:id="@+id/b6"
+                android:background="#4cff0000"
+                android:longClickable="false" />
 
-        if (savedInstanceState != null) {
-            token = savedInstanceState.getString("token");
-            operation = savedInstanceState.getString("operation");
-            if (savedInstanceState.getInt("lastButton") != 0) {
-                lastButton = (Button)findViewById(savedInstanceState.getInt("lastButton"));
-            }
-            res = savedInstanceState.getInt("res");
-            textView.setText(token);
-        }
-    }
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="−"
+                android:id="@+id/sub"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+        </LinearLayout>
 
-    @Override
-    public void onSaveInstanceState(Bundle outState) {
-        super.onSaveInstanceState(outState);
-        outState.putString("token", token);
-        outState.putString("operation", operation);
-        if (lastButton != null) {
-            outState.putInt("lastButton", lastButton.getId());
-        }
-        if (res != null) {
-            outState.putInt("res", res);
-        }
-    }
-}
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="1"
+                android:id="@+id/b1"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="2"
+                android:id="@+id/b2"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="3"
+                android:id="@+id/b3"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="×"
+                android:id="@+id/mul"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="="
+                android:id="@+id/calc"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="0"
+                android:id="@+id/b0"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="^"
+                android:id="@+id/pow"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="÷"
+                android:id="@+id/div"
+                android:background="#4cff0000"
+                android:longClickable="false" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
